syntax = "proto3";

package user;

service UserService {
  rpc ListUsers (Empty) returns (UserList);
  rpc CreateUser (CreateUserRequest) returns (User);
  rpc GetUser (UserRequestId) returns (User);
  rpc UpdateUser (UpdateUserRequest) returns (User);
  rpc DeleteUser (UserRequestId) returns (DeleteUserResponse);
}

message Empty {}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message UserList {
  repeated User users = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message UserRequestId {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
}

message DeleteUserResponse {
  bool success = 1;
}
